--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -5,10 +5,23 @@
 
 a {
     display: inline-block;
-    margin-left: 1rem;
     padding: 4px 20px;
     border-radius: 3px;
+    text-decoration: none;
+    color: white;
+
     &:hover {
-        background-color: #f0b3ff;
+        background-color: #723dc9;
+        color: grey;
     }
+
+    @media screen and(max-width: 576px) {
+        display: none;
+    }
+}
+
+.clicked {
+    border: 1px solid white;
+    background-color: #723dc9;
+    color: grey;
 }
