--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import '~@angular/material/theming';
+@import './assets/css/main.scss';
+
+
