--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import '~@angular/material/theming';
 @import './assets/css/main.scss';
-
+@import './assets/css/variables.scss';
 
