--- a/src/app/modules/start/start.component.html
+++ b/src/app/modules/start/start.component.html
@@ -1,1 +1,3 @@
-<h1 class="mat-display-1 mat-h1 mat-title mat-headline"><a [routerLink]="['/login']">Start</a></h1>
+<div class="start-wrapper">
+  <h1 class="mat-display-1 mat-h1 mat-title mat-headline"><a [routerLink]="['/login']">Start</a></h1>
+</div>
