--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,15 +4,16 @@
     </div>
     <div>
         <nav>
-            <a *ngIf="auth.isAuthanticated" routerLink="/home" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
+            <a *ngIf="auth.isAuthenticated" routerLink="/home" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
                 true}" matbutton> Home </a>
-            <a *ngIf="auth.isAuthanticated" routerLink="/bills" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
+            <a *ngIf="auth.isAuthenticated" routerLink="/bills" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
                 true}" matbutton> Bills </a>
-            <a *ngIf="!auth.isAuthanticated && !auth.isAdmin" routerLink="/login" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
+            <a *ngIf="!auth.isAuthenticated && !auth.isAdmin" routerLink="/login" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
              true}"> Login </a>
-            <a *ngIf="!auth.isAuthanticated && !auth.isAdmin" routerLink="/signup" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
+            <a *ngIf="!auth.isAuthenticated && !auth.isAdmin" routerLink="/signup" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
                 true}" matbutton> SignUp </a>
-          <a *ngIf="auth.isAuthanticated || auth.isAdmin" (click)="onLogout()" matbutton [ngStyle]="{'cursor': 'pointer'}"> Logout </a>
+            <a *ngIf="auth.isAdmin" routerLink="/admin/users" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact: true}">Users</a>
+            <a *ngIf="auth.isAuthenticated || auth.isAdmin" (click)="onLogout()" matbutton [ngStyle]="{'cursor': 'pointer'}"> Logout </a>
         </nav>
     </div>
 </mat-toolbar>
