--- a/src/app/modules/start/start.component.scss
+++ b/src/app/modules/start/start.component.scss
@@ -1,10 +1,14 @@
-h1 {
-  text-align: center;
-  position: relative;
-  top: 40%;
+.start-wrapper {
+  height: calc(100% - 65px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  a {
-    text-decoration: none;
-    color: black;
+  h1 {
+    a {
+      text-decoration: none;
+      color: black;
+    }
   }
 }
+
