add admin page functionality

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary" class="navbar">
-    <div>
-        BillSystem
+    <div class="app-title">
+      <div class="icon" *ngIf="arrowShow" (click)="onReturn()">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path style="fill: white;" d="M21 11H6.83l3.58-3.59L9 6l-6 6 6 6 1.41-1.41L6.83 13H21z"/></svg>
+      </div>
+      <div *ngIf="!arrowShow" class="app-title">BillSystem</div>
     </div>
     <div>
         <nav>
@@ -13,6 +16,7 @@
             <a *ngIf="!auth.isAuthenticated && !auth.isAdmin" routerLink="/signup" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact:
                 true}" matbutton> SignUp </a>
             <a *ngIf="auth.isAdmin" routerLink="/admin/users" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact: true}">Users</a>
+            <a *ngIf="auth.isAdmin" routerLink="/admin/newuser" routerLinkActive="clicked" [routerLinkActiveOptions]="{exact: true}">Add User</a>
             <a *ngIf="auth.isAuthenticated || auth.isAdmin" (click)="onLogout()" matbutton [ngStyle]="{'cursor': 'pointer'}"> Logout </a>
         </nav>
     </div>
