--- a/src/app/modules/signup/signup-form/signup-form.component.html
+++ b/src/app/modules/signup/signup-form/signup-form.component.html
@@ -27,5 +27,5 @@
   <mat-label>Password</mat-label>
   <input type="password" matInput name="passwordRepeat" formControlName="passwordRepeat">
 </mat-form-field>
-  <button mat-raised-button color="primary" type="submit">SignUp</button>
+  <button mat-raised-button color="primary" type="submit">{{buttonTitle}}</button>
 </form>
