--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -1,3 +1,3 @@
 <app-auth title="Registration" height="signup-height">
-  <app-signup-form (submitData)="registerUser($event)"></app-signup-form>
+  <app-signup-form buttonTitle="SignUp" (submitData)="registerUser($event)"></app-signup-form>
 </app-auth>
