--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,4 @@
+@import "variables";
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -26,4 +27,41 @@ body {
 
 .signup-height {
   height: calc(100vh - 70px);
+}
+
+
+
+.admin-info {
+    margin-top: 10px;
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+
+    button {
+      margin-left: 5px;
+
+      @media screen and (max-width: $sm) {
+        & {
+          margin: 0;
+          font-size: 12px;
+        }
+      }
+    }
+}
+
+.changing-form {
+  height: calc(100% - 70px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.app-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
